--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                         <div class="text-center"> <img src="assets/image/png/fox.png" alt="fox" class="my-4 "></div>
                         <div class="text-center my-4">
                             <a href="#" class=" nav-link bg-black text-white px-4 py-2 rounded-pill
-                                    ml-5 fs-sm fw-light d-inline-block border border-light">Connect Wallet</a></div>
+                                    ml-5 fs-sm fw-light d-inline-block border border-light">Connect Wallet</a>
+                        </div>
                     </div>
                 </div>
             </div>
